This PR includes
- Update packages.
- Replace internal docker images with external ones.
- Change paths by removing Circle in the path.
- Remove centre.io links in the repo.
- Update licenses in a few files.
- add .licenseignore

--- a/packages/verifier/src/views/partials/legal-terms.ejs
+++ b/packages/verifier/src/views/partials/legal-terms.ejs
@@ -32,10 +32,10 @@
       </li>
       <li class="legal-terms-text">
         <span class="legal-terms-text-item"
-          >Centre Consortium and License Agreement.</span
+          >Centre Consortium (now Circle) and License Agreement.</span
         >
         Verite is a set of open-source, decentralized identity protocols that
-        were developed by the Centre Consortium. By accepting a Verite
+        were developed by the Centre Consortium (now Circle). By accepting a Verite
         Credential, you are agreeing to the Verite software license agreement
         available
         <a
@@ -133,7 +133,7 @@
           >No Responsibility for Credentials Issued by Other Parties.</span
         >
         Verite is a set of open-source, decentralized identity protocols that
-        were developed by the Centre Consortium. Given Verite’s open source
+        were developed by the Centre Consortium (now Circle). Given Verite’s open source
         nature, any party may issue a credential based on its own standards and
         criteria. Circle has no responsibility for credentials issued by other
         parties.
