--- a/packages/verifier/src/views/partials/legal-terms.ejs
+++ b/packages/verifier/src/views/partials/legal-terms.ejs
@@ -3,7 +3,7 @@
     <p id="legal-terms-title">Terms Applicable to Protocols</p>
     <p class="legal-terms-text">
       This Verite Credential Acceptance Agreement (this “Agreement”) is a
-      contract between you (“you” or a “User”) and Circle Internet Financial,
+      contract between you (“you” or a “User”) and Circle Internet Group,
       LLC (“Circle,” “we,” or “us”) that applies to your acceptance of a Verite
       Decentralized Identity Credential (“Verite Credential’) that was issued by
       Circle. From and after the date set forth above, this Agreement shall
